<resources>

    <string name="menu_chart">Generate Chart</string>
    <string name="name">Daily +</string>
    <string name="email">gmail@mail.com</string>

    <string name="app_name">Daily+</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Daily+</string>

    <string name="nav_header_subtitle">Daily+@cmail.carleton.ca</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_generate">Generate Chart</string>
    <string name="menu_bill">Bill</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_language">Language</string>

    <string name="menu_categories">Categories</string>


    <string name="nav_communicate">Communicate</string>

    <string name="loading">loadingPage</string>
    <string name="add_expense">add new expense</string>
    <string name="cancel">Cancel</string>
    <string name="add">add</string>
    <string name="mainPage">main</string>
    <string name="facebook_app_id">2547926432157526</string>
    <string name="fb_login_protocol_scheme">fb2547926432157526</string>
    <string name="login">Login</string>
</resources>

