<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/home"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_language"
                android:icon="@drawable/language"
                android:title="@string/Language"/>
        <item
                android:id="@+id/nav_bill"
                android:icon="@drawable/bill"
                android:title="@string/menu_bill"/>
        <item
            android:id="@+id/nav_chart"
            android:icon="@drawable/generate"
            android:title="@string/menu_generate" />
    </group>

    <item android:title="@string/nav_communicate">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
